--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -19,7 +19,7 @@
     <a href="#news">자유게시판</a>
     <a href="#contact">리뷰게시판</a>
     <a href="#contact">배달가능식당</a>
-    <a href="#">로그인</a>
+    <a href="#login">로그인</a>
   </div>
     <div class="headImg">
       <img src="img/place303su.jpg" style="height: 600px; width: 100%;" />
