--- a/WebContent/shop/si.html
+++ b/WebContent/shop/si.html
@@ -9,11 +9,14 @@
 </head>
 <body>
 	<h1>시골집</h1>
-	<!-- <iframe src="https://map.kakao.com/link/to/고척동시골집,37.500636,126.867983" 
-		width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
-	</iframe> -->
+
     <div class='left-box'>
-        <img src="../img/gil.png" alt="시골집 가는길" width="600" height="450" style="float: left;">
+        <!-- <iframe src="https://map.kakao.com/link/to/고척동시골집,37.500636,126.867983" 
+		width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+	    </iframe> -->
+        <div id="map" style="width:100%;height:350px;"></div>
+        <button onclick="resizeMap()">지도 크기 바꾸기</button> 
+        <button onclick="relayout()">relayout 호출하기</button>
         <br>
         <h2>한줄 리뷰</h2> <p style="margin-left: 20px;">어머니의 손맛을 느낄 수 있는집</p>
     </div>
@@ -26,6 +29,7 @@
     
 	
 	https://dawitblog.tistory.com/50 참고
-    
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=abb0c5392e88307fec21ccc5d3ef776a"></script>
+    <script src="shop.js"></script>
 </body>
 </html>
