--- a/WebContent/mypage.html
+++ b/WebContent/mypage.html
@@ -22,7 +22,7 @@ crossorigin="anonymous">
 <div class='left-box' style="clear:both;">
     <h5>지난 한달간 먹은 메뉴 리스트</h5>
     <ul class="graph">
-  	<li class="graph-bar bar1" graph-val="30" style="height:30%""></li>
+  	<li class="graph-bar bar1" graph-val="30" style="height:30%"></li>
   	<li class="graph-bar bar2" graph-val="80"></li>
   	<li class="graph-bar bar3" graph-val="60"></li>
   	<li class="graph-bar bar4" graph-val="30"></li>   
